Fix encoding/decoding issue
Change-Id: If7a770548702cb9e6bb2d9e866c99c0396f74ee4
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Issue-ID: SDC-3967